save update in progress

--- a/Symbaroum/src/pug/oldsymbaroum.html
+++ b/Symbaroum/src/pug/oldsymbaroum.html
@@ -16,49 +16,7 @@ Concentration check
 
 
 <!--********* PAGE 1 -->
-<div class="sheet-section sheet-section-pc1">
-    <div style="height:160px;margin-bottom:1.5em;width:100%">
-        <div style="float:left; text-align:left;padding:20px 20px 20px 0;">
-            <label class="sheet-label-large" data-i18n="toughness">Toughness</label>
-            <div>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle" name="attr_toughness" value="@{strong}"/>
-                <span data-i18n="current">Current</span>
-            </div>
-            <div>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_toughness_max" min="10" value="10" />
-                <span data-i18n="maximum-abbrv">Max</span>
-            </div>
-            <div>
-                <input  type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_pain_threshold" value="ceil(@{strong}/2)" disabled="true" />
-                <span data-i18n="pain-threshold-abbrv">Pain thresh.</span>
-            </div>
-        </div>
-        <div style="text-align:right;float:right;padding:20px 10px 20px 10px;">
-            <label class="sheet-label-large" style="text-align:right;" data-i18n="corruption">Corruption</label>
-            <div>
-                <button type="roll" name="roll_corruption" title="Pick a dice value (to the right) and hit this button to roll" data-i18n-title="title-choose-dice-and-roll" value="/roll @{corruption-d} for Corruption..." style="background-image:url(http://i.imgur.com/MC61Qmt.png?1);background-position: center;width:40px; height:20px"></button>
-                <select name="attr_corruption-d">                
-                    <option value="d4">d4</option>
-                    <option value="d6">d6</option>
-                    <option value="d8">d8</option>
-                    <option value="d10">d10</option>
-                    <option value="d12">d12</option>
-                </select>
-            </div>
-            <div>
-                <span style="text-align:right;vertical-align:middle" data-i18n="temporary-abbrv">Temp.</span>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_corruption" min="0" value="0"/>
-            </div>
-            <div>
-                <span style="text-align:right;vertical-align:middle" data-i18n="permanent-abbrv">Perm.</span>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_corruption_permanent" min="0" value="0"/>
-            </div>
-            <div>
-                <span style="text-align:right;vertical-align:middle" data-i18n="threshold">Threshold</span>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle" name="attr_corruption_threshold" value="ceil(@{resolute}/2)" disabled="true" />
-            </div>
-        </div>    
-    </div>
+<div class="sheet-section sheet-section-pc1" style="margin-top: 20%">
     <div class="sheet-row" style="text-align:center;">
         <div class="sheet-attributes">
             <div>
@@ -827,11 +785,6 @@ Concentration check
                 </div>
             </div> <!-- END column 1 -->
             <div class="sheet-col">
-                <div class="sheet-ability-section">
-                    <label style="font-size:3em;margin-bottom:-.75em;margin-left:-16px;">&ldquo;</label>
-                    <textarea name="attr_character-quote"style="height:2em;width:100%;background:rgba(1,1,1,0.5);border:none;color:#fafafa;font-size:1.5em;padding:.5em;font-style:italic;" placeholder="Quote" data-i18n-placeholder="quote" ></textarea> 
-                    <span style="font-size:3em;float:right;margin-right:-18px;margin-top:-.25em;width:auto;">&rdquo;</span>
-                </div>
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="character-background">Character Background</label>
                     <textarea name="attr_background" data-i18n-title="character-background" title="Explain where your character comes from and where he or she wants to go and accomplish." placeholder="Explain where your character comes from and where he or she wants to go and accomplish." data-i18n-placeholder="character-background"></textarea>
