--- a/Symbaroum/symbaroum.html
+++ b/Symbaroum/symbaroum.html
@@ -2,16 +2,7 @@
 <span style="font-size: 12px;float: right;clear: both;margin-top: -.5em;">v<input name="attr_sheet_version" type="text" value="0" style="font-size: 12px;width: 3em;height: 1.5em; vertical-align: text-bottom;" readonly /></span>
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input name="attr_recalc1" type="checkbox" title="RECALC" style="display:none;">
-
-<!--*********MENU-->
-<input type="radio" name="attr_page-number" class="sheet-tab sheet-tab1" value="1" title="Character Sheet" data-i18n-title="title-character-sheet" checked="checked"/>
-<span class="sheet-tab sheet-tab1" data-i18n="character">Character</span>
-<input type="radio" name="attr_page-number" class="sheet-tab sheet-tab2" value="2" title="Traits and Abilities" data-i18n-title="title-traits-and-abilities" />
-<span class="sheet-tab sheet-tab2" data-i18n="traits-and-abilities">Traits | Abilities</span>
-<input type="radio" name="attr_page-number" class="sheet-tab sheet-tab3" value="3" title="Rituals and Powers" data-i18n-title="title-rituals-and-powers" />
-<span class="sheet-tab sheet-tab3" data-i18n="rituals-and-powers">Rituals | Powers</span>
-<input type="radio" name="attr_page-number" class="sheet-tab sheet-tab4" value="4" title="Equipment, Group, and Friends" data-i18n-title="title-equipment-group-and-friends" />
-<span class="sheet-tab sheet-tab4" data-i18n="equipment-and-biography">Equipment | Bio</span>
+<input class="tab" name="attr_page-number" type="hidden" value="1"/>
 <!-- PC SHEET-->
 <!-- =============================-->
 <div class="pc grid">
@@ -20,20 +11,72 @@
       <input name="attr_character-name" type="text"/><span data-i18n="name">Name</span>
     </label>
     <label data-i18n-title="race" title="race">
-      <input name="attr_character-race" type="text"/><span data-i18n="race"></span>
+      <input name="attr_character-race" type="text"/><span data-i18n="race">race</span>
     </label>
     <label data-i18n-title="occupation" title="occupation">
-      <input name="attr_character-occupation" type="text"/><span></span>
+      <input name="attr_character-occupation" type="text"/><span data-i18n="occupation">occupation</span>
     </label>
     <label data-i18n-title="player" title="player">
-      <input name="attr_player-name" type="text"/><span data-i18n="player"></span>
+      <input name="attr_player-name" type="text"/><span data-i18n="player">player</span>
     </label>
     <label data-i18n-title="experience-abbrv" title="exp">
-      <input name="attr_character-exp" type="number"/><span data-i18n="experience-abbrv"></span>
+      <input name="attr_character-exp" type="number"/><span data-i18n="experience-abbrv">exp</span>
     </label>
     <label data-i18n-title="unspent" title="unspent">
-      <input name="attr_character-expu" type="number"/><span data-i18n="unspent"></span>
+      <input name="attr_character-expu" type="number"/><span data-i18n="unspent">unspent</span>
     </label>
+  </div>
+  <div class="grid character-quote"><span class="quote">&ldquo;</span>
+    <label data-i18n-title="quote" title="quote">
+      <input data-i18n-placeholder="quote" name="attr_character-quote" placeholder="Quote" type="text"/><span data-i18n="quote">quote</span>
+    </label><span class="quote">&ldquo;</span>
+  </div>
+  <div class="grid character-shadow">
+    <label data-i18n-title="shadow" title="shadow">
+      <input name="attr_character-shadow" type="text"/><span data-i18n="shadow">shadow</span>
+    </label>
+  </div>
+  <div class="grid tabs">
+    <!-- CHARACTER TAB-->
+    <input class="tab" data-i18n-title="title-character-sheet" name="attr_page-number" title="Character Sheet" type="radio" value="1" checked="checked"/><span class="tab" data-i18n="character">Character</span>
+    <!-- TRAITS & ABILITIES TAB-->
+    <input class="tab" data-i18n-title="title-traits-and-abilities" name="attr_page-number" type="radio" title="Traits and Abilities" value="2"/><span class="tab" data-i18n="traits-and-abilities" value="3">Traits | Abilities</span>
+    <!-- RITUALS & POWERS TAB-->
+    <input class="tab" data-i18n-title="title-rituals-and-powers" name="attr_page-number" title="Rituals and Power" type="radio" value="3"/><span class="tab" data-i18n="rituals-and-powers">Rituals | Powers</span>
+    <!-- EQUIPMENT & BIO TAB-->
+    <input class="tab" data-i18n-title="title-equipment-group-and-friends" name="attr_page-number" title="Equipment, Group, and Friends" type="radio" value="4"/><span class="tab" data-i18n="equipment-and-biography">Equipment | Bio</span>
+  </div>
+  <div class="grid toughness section-pc1">
+    <h1 class="center" data-i18n="toughness">Toughness</h1>
+    <label class="center" data-i18n-title="current toughness input" title="current toughness input">
+      <input class="center" name="attr_toughness" title="@{toughness}" type="number" value="@{strong}"/>
+    </label><span class="center" data-i18n="current">Current</span>
+    <label class="center" data-i18n-title="toughness maximum input" title="toughness maximum input">
+      <input class="center" min="10" name="attr_toughness_max" title="@{toughness_max}" type="number" value="10"/>
+    </label><span class="center" data-i18n="maximum-abbrv">Max</span>
+    <label class="center" data-i18n-title="pain threshold display" title="pain threshold display">
+      <input class="center" name="attr_pain_threshold" title="@{pain_threshold}" type="number" value="ceil(@{strong}/2)" disabled="true"/>
+    </label><span class="center" data-i18n="pain-threshold-abbrv">Pain thresh.</span>
+  </div>
+  <div class="grid corruption section-pc1">
+    <h1 class="center" data-i18n="corruption">Corruption</h1>
+    <button data-i18n-title="title-choose-dice-and-roll" name="roll_corruption" title="Pick a dice value (to the right) and hit this button to roll" type="roll" value="/roll @{corruption-d} for Corruption..."></button>
+    <select name="attr_corruption-d">
+      <option value="d4">d4</option>
+      <option value="d6">d6</option>
+      <option value="d8">d8</option>
+      <option value="d10">d10</option>
+      <option value="d12">d12</option>
+    </select>
+    <label class="center" ata-i18n-title="corruption input" title="corruption input">
+      <input class="center" name="attr_corruption" min="0" title="@{corruption}" type="number" value="0"/>
+    </label><span class="center" data-i18n="temporary-abbrv">Temp.</span>
+    <label class="center" ata-i18n-title="permanent corruption input" title="permanent corruption input">
+      <input class="center" name="attr_corruption_permanent" min="0" title="@{corruption_permanent}" type="number" value="0"/>
+    </label><span class="center" data-i18n="permanent-abbrv">Perm.</span>
+    <label class="center" ata-i18n-title="corruption threshold" title="corruption threshold">
+      <input name="attr_corruption_threshold" title="@{corruption_threshold}" type="number" value="ceil(@{resolute}/2)" disabled="true"/>
+    </label><span class="center" data-i18n="threshold">Threshold</span>
   </div>
 </div><!--
 *********LATEST CHANGES/ADDITIONS*********
@@ -53,49 +96,7 @@ Concentration check
 
 
 <!--********* PAGE 1 -->
-<div class="sheet-section sheet-section-pc1">
-    <div style="height:160px;margin-bottom:1.5em;width:100%">
-        <div style="float:left; text-align:left;padding:20px 20px 20px 0;">
-            <label class="sheet-label-large" data-i18n="toughness">Toughness</label>
-            <div>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle" name="attr_toughness" value="@{strong}"/>
-                <span data-i18n="current">Current</span>
-            </div>
-            <div>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_toughness_max" min="10" value="10" />
-                <span data-i18n="maximum-abbrv">Max</span>
-            </div>
-            <div>
-                <input  type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_pain_threshold" value="ceil(@{strong}/2)" disabled="true" />
-                <span data-i18n="pain-threshold-abbrv">Pain thresh.</span>
-            </div>
-        </div>
-        <div style="text-align:right;float:right;padding:20px 10px 20px 10px;">
-            <label class="sheet-label-large" style="text-align:right;" data-i18n="corruption">Corruption</label>
-            <div>
-                <button type="roll" name="roll_corruption" title="Pick a dice value (to the right) and hit this button to roll" data-i18n-title="title-choose-dice-and-roll" value="/roll @{corruption-d} for Corruption..." style="background-image:url(http://i.imgur.com/MC61Qmt.png?1);background-position: center;width:40px; height:20px"></button>
-                <select name="attr_corruption-d">                
-                    <option value="d4">d4</option>
-                    <option value="d6">d6</option>
-                    <option value="d8">d8</option>
-                    <option value="d10">d10</option>
-                    <option value="d12">d12</option>
-                </select>
-            </div>
-            <div>
-                <span style="text-align:right;vertical-align:middle" data-i18n="temporary-abbrv">Temp.</span>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_corruption" min="0" value="0"/>
-            </div>
-            <div>
-                <span style="text-align:right;vertical-align:middle" data-i18n="permanent-abbrv">Perm.</span>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle"name="attr_corruption_permanent" min="0" value="0"/>
-            </div>
-            <div>
-                <span style="text-align:right;vertical-align:middle" data-i18n="threshold">Threshold</span>
-                <input type="number" class="sheet-number-box-small" style="vertical-align:middle" name="attr_corruption_threshold" value="ceil(@{resolute}/2)" disabled="true" />
-            </div>
-        </div>    
-    </div>
+<div class="sheet-section sheet-section-pc1" style="margin-top: 20%">
     <div class="sheet-row" style="text-align:center;">
         <div class="sheet-attributes">
             <div>
@@ -864,11 +865,6 @@ Concentration check
                 </div>
             </div> <!-- END column 1 -->
             <div class="sheet-col">
-                <div class="sheet-ability-section">
-                    <label style="font-size:3em;margin-bottom:-.75em;margin-left:-16px;">&ldquo;</label>
-                    <textarea name="attr_character-quote"style="height:2em;width:100%;background:rgba(1,1,1,0.5);border:none;color:#fafafa;font-size:1.5em;padding:.5em;font-style:italic;" placeholder="Quote" data-i18n-placeholder="quote" ></textarea> 
-                    <span style="font-size:3em;float:right;margin-right:-18px;margin-top:-.25em;width:auto;">&rdquo;</span>
-                </div>
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="character-background">Character Background</label>
                     <textarea name="attr_background" data-i18n-title="character-background" title="Explain where your character comes from and where he or she wants to go and accomplish." placeholder="Explain where your character comes from and where he or she wants to go and accomplish." data-i18n-placeholder="character-background"></textarea>
