--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -398,6 +398,7 @@
 		<span class="sonderfertigkeit-cb9" data-i18n="schipsf">SchiP-Sonderfertigkeit</span>
 		<input name="attr_sonderfertigkeit_selector" type="radio" class="sonderfertigkeit-cb8" title="sonderfertigkeit" value="8"></input>
 		<span class="sonderfertigkeit-cb8" data-i18n="sonstiges">Sonstige</span>
+
 		<div class="sonderfertigkeitliste">
 			<fieldset class="repeating_sonderfertigkeit">
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb0" value="0" checked></input>
@@ -409,7 +410,7 @@
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb6" value="6"></input>
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb7" value="7"></input>
 				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb8" value="8"></input>
-        <input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb9" value="9"></input>
+				<input name="attr_sonderfertigkeittyp" type="radio" class="hidden sonderfertigkeit-cb9" value="9"></input>
 				<div class="modifikator-grid sonderfertigkeit-filtered">
 					<span  data-i18n="typ">Typ</span>
 					<select class="sonderfertigkeittyp-in" name="attr_sonderfertigkeittyp" >
@@ -612,6 +613,7 @@
  					 </optgroup>
 					</select>
 					<input class="modifikator modifikator-value1" type="number" name='attr_sonderfertigkeit_mod1' value='0'/>
+
 					<select class="modifikator modifikator-select2" name="attr_sonderfertigkeit_auswahl2" >
 						<option value="add_modifikator" selected>Modifikator hinzufügen</option>
 						<optgroup label="Eigenschaften">
@@ -980,7 +982,6 @@
 						<option value="steinbearbeitung_fw_mod" data-i18n="steinbearbeitungfw">steinbearbeitung</option>
 						<option value="stoffbearbeitung_fw_mod" data-i18n="stoffbearbeitungfw">stoffbearbeitung</option>
 						</optgroup>
-
 					</select>
 					<input  class="modifikator modifikator-value3" type="number" name='attr_sonderfertigkeit_mod3' value='0'/>
 					<input type="text" name='attr_sonderfertigkeit_auswahl_vorher1' value='Modifikator hinzufuegen' hidden />
@@ -3474,7 +3475,7 @@
 			<h3 data-i18n="zauber">Zauber</h3>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb0" title="all" value="0" selected></input>
 			  <span class="zauber-cb0" data-i18n="alle">Alle</span>
-  			<input name="attr_zauber_selector" type="radio" class="zauber-cb1" title="Zauberspruch" value="1"></input>
+				<input name="attr_zauber_selector" type="radio" class="zauber-cb1" title="Zauberspruch" value="1"></input>
 				<span class="zauber-cb1" data-i18n="zauberspruch">Zauberspruch</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb2" title="Zauberspruch" value="2"></input>
 				<span class="zauber-cb2" data-i18n="ritual">Ritual</span>
@@ -3498,6 +3499,7 @@
 				<span class="zauber-cb11" data-i18n="vertrautentrick">Vertrautentrick</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb12" title="Zauberspruch" value="12"></input>
 				<span class="zauber-cb12" data-i18n="sonstiges">Sonstiges</span>
+
 
 			<div class="zauberliste">
 			<fieldset class="repeating_zauber">
@@ -3626,7 +3628,6 @@
 	<!-- Ende Magie-->
 
 </div>
-
 
 <!-- Götterwirken -->
 <div class="section tab5">
@@ -3842,7 +3843,7 @@
 					<input type="text" name="attr_erweiterung3" >
 					<span data-i18n="anmerkung">Anmerkung</span>
 					<input type="text" name="attr_anmerkung" >
-					<span  data-i18n="referenz">Referenz</span>
+					<span data-i18n="referenz">Referenz</span>
 					<input type="text" name="attr_reference" >
 					</div> <!-- Ende glaube erweiterung -->
 					</div> <!-- Ende liturgie filtered -->
@@ -3869,11 +3870,12 @@
 			<br>
 			Großer Dank geht an die Entwickler des DSA5 Character Sheet German Patrick Gebhardt, enhanced by Sönke Holsten, Adam Fedor. Einige Teile des Charakterbogens habe ich von dort übernommen oder mich inspirieren lassen.
 			<br>
-			<a href="http://ulisses-regelwiki.de/">DSA Regelwiki</a>
+			<a href="http://ulisses-regelwiki.de/">DSA Regelwiki - http://ulisses-regelwiki.de/</a>
+			<br>
+			<br>
+			<span class="disclaimer" data-i18n="disclaimer">© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems.</span>
 			</div>
 </div>
-
-
 
 <!-- Status -->
 <div class="section tab7">
