--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -17,7 +17,7 @@
 	<div class="update-alert">
 		<div class="container">
 		<input type="checkbox" class="sheet-showarrow sheet-ack-button" name="attr_announcements_show" value="1" title="Click to view announcements" />
-		<label class="show-content">Announcements</label>
+		<label class="show-content">Announcements <span name="attr_latest_changes"></span></label>
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
@@ -25,6 +25,7 @@
 					<li>Jumping - Add check box to factor in encumbrance level. Round Yards to two decimal places.</li>
 					<li>Critical Successes Option: If Turn Off is selected, fixed bug where the critical success text is displayed for active defenses.</li>
 					<li>Combat Tab - Active Defense. If U or F is entered for INFO, the appropriate description will be added. New Feature.</li>
+					<li>Added date to announcements tip.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update
 				</span></b></label>
@@ -3966,6 +3967,7 @@
 		<li>Jumping - Add check box to factor in encumbrance level.</li>
 		<li>Critical Successes Option: If Turn Off is selected, fixed bug where the critical success text is displayed for active defenses.</li>
 		<li>Combat Tab - Active Defense. If U or F is entered for INFO, the appropriate description will be added. New Feature.</li>
+		<li>Added date to announcements tip.</li>
 	</ul>
 	
 	<h4>Version: 1.6.5</h4>
