remove snarky comment

--- a/Symbaroum/symbaroum.html
+++ b/Symbaroum/symbaroum.html
@@ -97,8 +97,7 @@
     <button data-i18n="strong" name="roll_StrongCheck" type="roll" value="&amp;{template:attrib}{{name=^{strong}}} {{character=@{character-name}}} {{attribute=[[@{strong}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Strong</span></button>
     <input name="attr_vigilant" max="15" min="5" type="number" value="10"/>
     <button data-i18n="vigilant" name="roll_VigilantCheck" type="roll" value="&amp;{template:attrib}{{name=^{vigilant}}} {{character=@{character-name}}} {{attribute=[[@{vigilant}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Vigilant</span></button>
-    <input class="sheet-number-circle" type="number" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total"/>
-    <button data-i18n-title="title-button-does-nothing" title="What, you thought this button did something? It doesn't." type="roll"> <span data-i18n="total">Total</span></button>
+    <input class="sheet-number-circle" type="number" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total"/><span data-i18n="total">Total</span>
   </div>
   <div class="grid attacks section-pc1">
     <div class="grid section-header">
