starting with translation en

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -3360,6 +3360,7 @@
 					<div class="modifikator-grid sonderfertigkeit-filtered">
 						<input class="modifikator modifikator-label" type="text" name='attr_sonderfertigkeit_name' value='Name'/>
 						<input class="modifikator modifikator-cb" type="checkbox" name='attr_sonderfertigkeit_aktiviert' value='1'/>
+						<input class="modifikator modifikator-description" type="text" name='attr_sonderfertigkeit_anmerkung' value='Anmerkung'/>
 					 </div>
 				</fieldset>
 			</div>
@@ -3619,7 +3620,7 @@
 				</div> <!-- Ende magie erweiterung -->
 				</div> <!-- Ende Zauber filtered -->
 			</fieldset>
-			</div> <!-- Ende zauberliste -->
+		</div> <!-- Ende zauberliste -->
 
 		</div>
 		<!-- Ende Zauber-->
@@ -3730,7 +3731,6 @@
 			<hr/>
 
 			<div class="glaube-section liturgie">
-
 					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb0" title="all" value="0"></input>
 					<span class="liturgie-cb0" data-i18n="alle">Alle</span>
 					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb1" title="liturgiespruch" value="1"></input>
