D&D 5e Mancer Level+: UC-64 - ASIs need to lock attributes > 20

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -15755,6 +15755,14 @@
 
         } else {
             updateAbilityLock(eventinfo.sourceSection);
+            //This will lock other ASI when leveling up multiple levels at once
+            //By Miguel
+            var repeatingData = getCharmancerData()['lp-asi'].repeating || [];
+            for(data in repeatingData) {
+              if(repeatingData[data].indexOf('_asi-row') > -1) {
+                updateAbilityLock(repeatingData[data]);
+              }
+            }
         }
         recalcLpData();
     });
