saving SR5 importer

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1884,7 +1884,7 @@
 						<div>
 							<h2 data-i18n="importer">Importer</h2>
 							<button type="action" name="act_import_launch" data-i18n="importecharacter">Import Character</button>
-							<p data-i18n="importertext">You can import a character with a JSON from Chummer or Hero Lab.</p>
+							<p data-i18n="importertext">You can import a character with a JSON from Chummer. <!--or Hero Lab.--> The game owner must set a Compendium in the Game Settings. It does not matter which one you pick. Charactermancer software simply requires one be picked.</p>
 						</div>
 					</div>
 					<div class="op-col">
@@ -5016,17 +5016,17 @@
 	<div class="mancer-box">
 		<h1>Shadowrun Fifth Edition Character Importer</h1>
 		<h2>Setup</h2>
-		<p>This will import character JSON data generated from Chummer 5 or Hero Lab.</p>	
+		<p>This will import character JSON data generated from Chummer 5. This is an <em>experimental</em> feature which is not 100% completed. It will save you a bit of time when bringing a character to Roll20.</p>	
 		<h3>Pick Character Builder</h3>
 		<div class="pick-builder">
 			<label title="choose chummer">
 				<h4>Chummer</h4>
 				<input type="radio" name="comp_builder" value="Chummer" checked />
 			</label>
-			<label title="choose hero lab">
+			<!--<label title="choose hero lab">
 				<h4>Hero Lab</h4>
 				<input type="radio" name="comp_builder" value="Hero Lab" />
-			</label>
+			</label>-->
 		</div>
 		<div class="directions"></div>
 		<h3>Enter JSON Here</h3>
