--- a/Symbaroum/symbaroum.html
+++ b/Symbaroum/symbaroum.html
@@ -35,6 +35,25 @@
       <input name="attr_character-shadow" type="text"/><span data-i18n="shadow">shadow</span>
     </label>
   </div>
+  <div class="grid attributes">
+    <input name="attr_accurate" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="accurate" name="roll_AccurateCheck" type="roll" value="&amp;{template:attrib}{{name=^{accurate}}} {{character=@{character-name}}} {{attribute=[[@{accurate}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Accurate</span></button>
+    <input name="attr_cunning" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="cunning" name="roll_CunningCheck" type="roll" value="&amp;{template:attrib}{{name=^{cunning}}} {{character=@{character-name}}} {{attribute=[[@{cunning}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Cunning</span></button>
+    <input name="attr_discreet" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="discreet" name="roll_DiscreetCheck" type="roll" value="&amp;{template:attrib}{{name=^{discreet}}} {{character=@{character-name}}} {{attribute=[[@{discreet}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Discreet</span></button>
+    <input name="attr_persuasive" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="persuasive" name="roll_PersuasiveCheck" type="roll" value="&amp;{template:attrib}{{name=^{persuasive}}} {{character=@{character-name}}} {{attribute=[[@{persuasive}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Persuasive</span></button>
+    <input name="attr_quick" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="quick" name="roll_QuickCheck" type="roll" value="&amp;{template:attrib}{{name=^{quick}}} {{character=@{character-name}}} {{attribute=[[@{quick}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Quick</span></button>
+    <input name="attr_resolute" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="resolute" name="roll_ResoluteCheck" type="roll" value="&amp;{template:attrib}{{name=^{resolute}}} {{character=@{character-name}}} {{attribute=[[@{resolute}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Resolute</span></button>
+    <input name="attr_strong" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="strong" name="roll_StrongCheck" type="roll" value="&amp;{template:attrib}{{name=^{strong}}} {{character=@{character-name}}} {{attribute=[[@{strong}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Strong</span></button>
+    <input name="attr_vigilant" max="15" min="5" type="number" value="10"/>
+    <button data-i18n="vigilant" name="roll_VigilantCheck" type="roll" value="&amp;{template:attrib}{{name=^{vigilant}}} {{character=@{character-name}}} {{attribute=[[@{vigilant}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Vigilant</span></button>
+    <input class="sheet-number-circle" type="number" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total"/><span data-i18n="total">Total</span>
+  </div>
   <div class="grid tabs">
     <!-- CHARACTER TAB-->
     <input class="tab" data-i18n-title="title-character-sheet" name="attr_page-number" title="Character Sheet" type="radio" value="1" checked="checked"/><span class="tab" data-i18n="character">Character</span>
@@ -79,25 +98,6 @@
     <label class="center" ata-i18n-title="corruption threshold" title="corruption threshold">
       <input class="center" name="attr_corruption_threshold" title="@{corruption_threshold}" type="number" value="ceil(@{resolute}/2)" disabled="true"/>
     </label><span class="center" data-i18n="threshold">Threshold</span>
-  </div>
-  <div class="grid attributes section-pc1">
-    <input name="attr_accurate" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="accurate" name="roll_AccurateCheck" type="roll" value="&amp;{template:attrib}{{name=^{accurate}}} {{character=@{character-name}}} {{attribute=[[@{accurate}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Accurate</span></button>
-    <input name="attr_cunning" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="cunning" name="roll_CunningCheck" type="roll" value="&amp;{template:attrib}{{name=^{cunning}}} {{character=@{character-name}}} {{attribute=[[@{cunning}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Cunning</span></button>
-    <input name="attr_discreet" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="discreet" name="roll_DiscreetCheck" type="roll" value="&amp;{template:attrib}{{name=^{discreet}}} {{character=@{character-name}}} {{attribute=[[@{discreet}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Discreet</span></button>
-    <input name="attr_persuasive" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="persuasive" name="roll_PersuasiveCheck" type="roll" value="&amp;{template:attrib}{{name=^{persuasive}}} {{character=@{character-name}}} {{attribute=[[@{persuasive}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Persuasive</span></button>
-    <input name="attr_quick" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="quick" name="roll_QuickCheck" type="roll" value="&amp;{template:attrib}{{name=^{quick}}} {{character=@{character-name}}} {{attribute=[[@{quick}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Quick</span></button>
-    <input name="attr_resolute" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="resolute" name="roll_ResoluteCheck" type="roll" value="&amp;{template:attrib}{{name=^{resolute}}} {{character=@{character-name}}} {{attribute=[[@{resolute}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Resolute</span></button>
-    <input name="attr_strong" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="strong" name="roll_StrongCheck" type="roll" value="&amp;{template:attrib}{{name=^{strong}}} {{character=@{character-name}}} {{attribute=[[@{strong}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Strong</span></button>
-    <input name="attr_vigilant" max="15" min="5" type="number" value="10"/>
-    <button data-i18n="vigilant" name="roll_VigilantCheck" type="roll" value="&amp;{template:attrib}{{name=^{vigilant}}} {{character=@{character-name}}} {{attribute=[[@{vigilant}+?{Enemy Disadvantage|0}]]}} {{roll=[[1d20]]}}"><span>Vigilant</span></button>
-    <input class="sheet-number-circle" type="number" disabled="true" value="(@{accurate}+@{cunning}+@{discreet}+@{persuasive}+@{quick}+@{resolute}+@{strong}+@{vigilant})" name="attr_attribute-total"/><span data-i18n="total">Total</span>
   </div>
   <div class="grid attacks section-pc1">
     <div class="grid section-header">
@@ -159,7 +159,7 @@
         </select>
       </label>
       <label class="dashed" data-i18n-title="attack" title="attack">
-        <input class="center" data-i18n-title="title-bonus-to-attack-roll" name="attr_weapon1-extra-attack" title="Bonus to attack roll" type="number"/>
+        <input class="center" data-i18n-title="title-bonus-to-attack-roll" name="attr_weapon1-extra-attack" title="Bonus to attack roll" type="number" value="0"/>
       </label>
     </div>
     <fieldset class="repeating_weapons">
@@ -210,7 +210,7 @@
           </select>
         </label>
         <label class="dashed" data-i18n-title="attack" title="attack">
-          <input class="center" data-i18n-title="title-bonus-to-attack-roll" name="attr_weapon1-extra-attack" title="Bonus to attack roll" type="number"/>
+          <input class="center" data-i18n-title="title-bonus-to-attack-roll" name="attr_weapon1-extra-attack" title="Bonus to attack roll" type="number" value="0"/>
         </label>
       </div>
     </fieldset>
@@ -767,8 +767,7 @@ Concentration check
             </div> <!-- END column 2 -->
         </div>
     </div>
-</div>
-<!-- *******  PAGE 4 -->
+</div><!-- *******  PAGE 4 -->
 <div class="sheet-section sheet-section-pc4">
     <div class="sheet-row" style="text-align:center">
         <div>
@@ -858,6 +857,7 @@ Concentration check
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="character-background">Character Background</label>
                     <textarea name="attr_background" data-i18n-title="character-background" title="Explain where your character comes from and where he or she wants to go and accomplish." placeholder="Explain where your character comes from and where he or she wants to go and accomplish." data-i18n-placeholder="character-background"></textarea>
+                    <textarea name="attr_character_goal"style="height:3.5em;" title="Character Goal" data-i18n-title="character-goal" placeholder="Character Goal" data-i18n-placeholder="character-goal"></textarea>
                 </div>
                 <div class="sheet-ability-section">
                     <label class="sheet-label-large" data-i18n="group">Group</label>
@@ -884,9 +884,7 @@ Concentration check
             </div>
         </div>
     </div>
-</div>
-
-<rolltemplate class="sheet-rolltemplate-abilitycheck">
+</div><rolltemplate class="sheet-rolltemplate-abilitycheck">
     <table>
     	<tr><th class="attribhead" colspan="2">{{name}}</th></tr>
 		{{#rollLess() selected 0}}
@@ -991,8 +989,7 @@ Concentration check
         {{/rollGreater() attack-type 0}} 
     </table>
 </rolltemplate>
-
-<script type="text/worker">
+  <script type="text/worker">
 
 var Sheet = Sheet || (function() {
 
