--- a/Mythras/src/sheet/types/vehicle/m-space.html
+++ b/Mythras/src/sheet/types/vehicle/m-space.html
@@ -145,7 +145,7 @@
             <div class="vehicle-number header">#</div>
         </div>
         <div class="spaceship">
-            <div class="msvehicle-table header">d100</div>
+            <div class="msvehicle-table header"><button type="roll" class="sheet-reduced-size sheet-no-dice sheet-full-width" name="roll_ship_location" value="@{roll_display}&{template:default} {{name=^{hit-location-u}}} @{name_display} {{^{roll-u}=[[ 1d100 ]]}}"><span class="bold">1d100</span></button></div>
             <div class="vehicle-module-name header"><span data-i18n="module-u">Module</span></div>
             <div class="vehicle-number header"><span data-i18n="hp-u">HP</span></div>
             <div class="vehicle-number header">#</div>
