--- a/Mythras/src/Mythras.html
+++ b/Mythras/src/Mythras.html
@@ -1,5 +1,13 @@
 <!-- Sheet -->
-${new File("src/sheet/generic/hidden_configuration.html").getText()}
+<input type="text" class="hidden disabled number-width text-align-center" name="attr_version" value="1.9.1">
+
+<!-- Sheet Style Configs -->
+<input type="radio" class="classic-fantasy-style-toggle hidden" name="attr_sheet_style" value="classic_fantasy">
+<input type="radio" class="default-style-toggle hidden" name="attr_sheet_style" value="default" checked>
+<input type="radio" class="luther-arkwright-style-toggle hidden" name="attr_sheet_style" value="luther_arkwright">
+<input type="radio" class="m-space-style-toggle hidden" name="attr_sheet_style" value="m-space">
+<input type="radio" class="odd-soot-style-toggle hidden" name="attr_sheet_style" value="odd_soot">
+<input type="radio" class="thennla-style-toggle hidden" name="attr_sheet_style" value="thennla">
 
 <div class="wrapper">
     <!-- Header -->
@@ -9,6 +17,8 @@ ${new File("src/sheet/generic/hidden_configuration.html").getText()}
         <h3 style="display: inline"><span data-i18n="settings-u">Settings</span></h3>
         <span style="font-size: 85%">(<span data-i18n="version-u">Version</span> <span name="attr_version"></span>)</span>
     </div>
+    ${new File("src/sheet/generic/hidden_configuration.html").getText()}
+
     ${new File("src/sheet/generic/options.html").getText()}
     ${new File("src/sheet/generic/recalc_button.html").getText()}
 
@@ -72,13 +82,14 @@ ${new File("src/roll_templates/default.html").getText()}
 
 ${new File("src/roll_templates/effect.html").getText()}
 
+${new File("src/roll_templates/hit_location.html").getText()}
+
 ${new File("src/roll_templates/magic.html").getText()}
+
+${new File("src/roll_templates/resolution_pool.html").getText()}
 
 ${new File("src/roll_templates/skill.html").getText()}
 
+${new File("src/roll_templates/system.html").getText()}
+
 ${new File("src/roll_templates/weapon.html").getText()}
-
-
-
-
-
