--- a/Mythras/src/sheet/types/vehicle/mythras.html
+++ b/Mythras/src/sheet/types/vehicle/mythras.html
@@ -7,7 +7,7 @@
                 <div class="mythras-vehicle-label"><span data-i18n="name-u" class="bold">Name</span>:</div>
                 <div class="mythras-vehicle-field"><input type="text" class="full-width" name="attr_character_name"></div>
                 <div class="mythras-vehicle-label"><span data-i18n="type-u" class="bold">Type</span>:</div>
-                <div class="mythras-vehicle-field"><input type="radio" name="attr_mythras_vehicle_type" value="terrestrial"><span data-i18n="terrestrial-u">Terrestrial</span>&nbsp;<input type="radio" name="attr_mythras_vehicle_type" value="spaceship"><span data-i18n="spaceship-u">Spaceship</span></div>
+                <div class="mythras-vehicle-field"><input type="radio" name="attr_mythras_vehicle_type" value="terrestrial" checked><span data-i18n="terrestrial-u">Terrestrial</span>&nbsp;<input type="radio" name="attr_mythras_vehicle_type" value="spaceship"><span data-i18n="spaceship-u">Spaceship</span></div>
             </div>
             <div>
                 <div class="mythras-vehicle-label"><span data-i18n="size-u" class="bold">Size</span>:</div>
@@ -80,8 +80,9 @@
 
     <div style="width: 288px; margin-bottom: 5px; float: left;" class="section">
         <h3><span data-i18n="systems-u">Systems</span></h3>
+        <input class="sheet-hidden" name="attr_vehicle_system_die" value="1d8">
         <div>
-            <div class="mythras-vehicle-system-roll header"><span data-i18n="roll-u">Roll</span></div>
+            <div class="mythras-vehicle-system-roll header"><button type="roll" class="sheet-reduced-size sheet-no-dice sheet-full-width" name="roll_system_location" value="@{roll_display}&{template:system} {{name=^{hit-location-u}}} @{name_display} {{roll=[[ @{vehicle_system_die} ]]}} {{hull=@{vehicle_hull}}} {{structure=@{vehicle_structure}}} {{structure_max=@{vehicle_structure|max}}} {{shields=@{vehicle_shields}}} {{shields_max=@{vehicle_shields|max}}} {{system1_name=@{vehicle_system1_name}}} {{system1_hits=@{vehicle_system1_hits}}} {{system1_hits_max=@{vehicle_system1_hits|max}}} {{system2_name=@{vehicle_system2_name}}} {{system2_hits=@{vehicle_system2_hits}}} {{system2_hits_max=@{vehicle_system2_hits|max}}} {{system3_name=@{vehicle_system3_name}}} {{system3_hits=@{vehicle_system3_hits}}} {{system3_hits_max=@{vehicle_system3_hits|max}}} {{system4_name=@{vehicle_system4_name}}} {{system4_hits=@{vehicle_system4_hits}}} {{system4_hits_max=@{vehicle_system4_hits|max}}} {{system5_name=@{vehicle_system5_name}}} {{system5_hits=@{vehicle_system5_hits}}} {{system5_hits_max=@{vehicle_system5_hits|max}}} {{system6_name=@{vehicle_system6_name}}} {{system6_hits=@{vehicle_system6_hits}}} {{system6_hits_max=@{vehicle_system6_hits|max}}} {{system7_name=@{vehicle_system7_name}}} {{system7_hits=@{vehicle_system7_hits}}} {{system7_hits_max=@{vehicle_system7_hits|max}}} {{system8_name=@{vehicle_system8_name}}} {{system8_hits=@{vehicle_system8_hits}}} {{system8_hits_max=@{vehicle_system8_hits|max}}} {{system9_name=@{vehicle_system9_name}}} {{system9_hits=@{vehicle_system9_hits}}} {{system9_hits_max=@{vehicle_system9_hits|max}}} {{system10_name=@{vehicle_system10_name}}} {{system10_hits=@{vehicle_system10_hits}}} {{system10_hits_max=@{vehicle_system10_hits|max}}}"><span name="attr_vehicle_system_die" class="bold"></span></button></div>
             <div class="mythras-vehicle-system-name header"><span data-i18n="system-u">System</span></div>
             <div class="mythras-vehicle-system-hits header"><span data-i18n="hits-u">Hits</span></div>
         </div>
