[EP2] Fix for Chrome + Muse

--- a/Eclipse Phase V2/Eclipse Phase V2.html
+++ b/Eclipse Phase V2/Eclipse Phase V2.html
@@ -1343,7 +1343,7 @@
 						<span data-i18n="medicine">Medicine</span>
 					</button>
 					<input type="text" name="attr_spe-muse-medicine" data-i18n-placeholder="specializations" placeholder="Specializations" />
-					<input type="number" name="attr_total-muse-medicine" value="(@{cognitionMuse}+@{rank-muse-medicine}+@{temp-muse-medicine})" disabled />
+					<input type="number" name="attr_total-muse-medicine" value="(@{rank-muse-medicine}+@{temp-muse-medicine})" disabled />
 					<input type="number" name="attr_rank-muse-medicine" value="0" />
 					<input type="number" name="attr_temp-muse-medicine" value="0" />
 					<fieldset class="repeating_muse-medicine">
@@ -1393,7 +1393,7 @@
 						<span data-i18n="pilot">Pilot</span>
 					</button>
 					<input type="text" name="attr_spe-muse-pilot" data-i18n-placeholder="specializations" placeholder="Specializations" />
-					<input type="number" name="attr_total-muse-pilot" value="(@{reflexesMuse}+@{rank-muse-pilot}+@{temp-muse-pilot})" disabled />
+					<input type="number" name="attr_total-muse-pilot" value="(@{rank-muse-pilot}+@{temp-muse-pilot})" disabled />
 					<input type="number" name="attr_rank-muse-pilot" value="0" />
 					<input type="number" name="attr_temp-muse-pilot" value="0" />
 					<fieldset class="repeating_muse-pilot">
