D&D 5e - UC115: Spellcasting save DC

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -9723,7 +9723,10 @@
 
                     if(v["pb_type"] && v["pb_type"] === "die") {
                         atk = atk + "+" + v["pb"];
-                        dc = dc + parseInt(v["pb"].substring(1), 10) / 2;
+                        //Fixing Spell DC when using type Die
+                        //By Miguel
+                        //Used to be equals to: dc + parseInt(v["pb"].substring(1), 10) / 2
+                        dc = dc + "+" + v["pb"];
                     }
                     else {
                         atk = parseInt(atk, 10) + parseInt(v["pb"], 10);
