fixed two small bugs

--- a/Kids on Bikes Official/kob.html
+++ b/Kids on Bikes Official/kob.html
@@ -1,4 +1,5 @@
 
+<input name="attr_version" type="hidden" value="1.01"/>
 <h1 class="logo"><img alt="Kids on Bike Character Sheet" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Kids-on-Bikes/images/KOBLogo.png"/></h1>
 <div class="grid kob-row">
   <div class="grid box biobox"><img alt="Name" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Kids-on-Bikes/images/Label-Name.png"/>
@@ -101,9 +102,9 @@
     <label data-i18n-title="COOL UNDER PRESSURE" title="COOL UNDER PRESSURE">
       <input name="attr_cool" title="@{cool}" type="checkbox" value="1"/>
     </label><span data-i18n="COOL UNDER PRESSURE">COOL UNDER PRESSURE</span>
-    <label data-i18n-title="EASYGOING" title="EASYGOING">
+    <label data-i18n-title="EASY GOING" title="EASY GOING">
       <input name="attr_easy_going" title="@{easy_going}" type="checkbox" value="1"/>
-    </label><span data-i18n="EASYGOING">EASYGOING</span>
+    </label><span data-i18n="EASY GOING">EASY GOING</span>
     <label data-i18n-title="GROSS" title="GROSS">
       <input name="attr_gross" title="@{gross}" type="checkbox" value="1"/>
     </label><span data-i18n="GROSS">GROSS</span>
@@ -173,9 +174,6 @@
     <label data-i18n-title="DECEITFUL" title="DECEITFUL">
       <input name="attr_deceitful" title="@{}" type="checkbox" value="1"/>
     </label><span data-i18n="DECEITFUL">DECEITFUL</span>
-    <label data-i18n-title="DEMANDING" title="DEMANDING">
-      <input name="attr_demanding" title="@{}" type="checkbox" value="1"/>
-    </label><span data-i18n="DEMANDING">DEMANDING</span>
     <label data-i18n-title="DEMANDING" title="DEMANDING">
       <input name="attr_demanding" title="@{}" type="checkbox" value="1"/>
     </label><span data-i18n="DEMANDING">DEMANDING</span>
