--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -7018,6 +7018,11 @@
     };
 
     var update_tool = function(tool_id) {
+        //D&D 5e Mancer: Land Vehicles proficiency does not drop with Marine background (UC748)
+        //Added a test to check for an undefined tool_id so to prevent similar errors.
+        //By Miguel Peres
+        if(typeof tool_id == "undefined") return;
+
         if(tool_id.substring(0,1) === "-" && tool_id.length === 20) {
             do_update_tool([tool_id]);
         }
@@ -8009,6 +8014,11 @@
                     var tool_array = jsonparse(blob["Tool Proficiency"]);
                     if(tool_array["Proficiencies"] && tool_array["Proficiencies"].length) {
                         _.each(tool_array["Proficiencies"], function(prof) {
+                            //D&D 5e Mancer: Land Vehicles proficiency does not drop with Marine background (UC748)
+                            //Generating ID that was coming empty for not existing rows.
+                            //By Miguel Peres
+                            let newrowid = generateRowID();
+
                             let existing = {};
                             _.each(repeating.tool, function(tool, id) {
                                 if(tool.toolname == prof.toLowerCase()) {
